--- a/_css/main.scss
+++ b/_css/main.scss
@@ -19,7 +19,7 @@ $trans: all 0.3s ease-out;
 
 body{
     font-family: 'Catamaran', sans-serif;
-    color: back;
+    color: black;
     font-size: 10px;
 }
 h2{
@@ -132,6 +132,7 @@ h2{
     }
 .mainHeader{
     border-bottom: 2px solid #b3b3b3;
+    
    
     .container{
         display: flex;
@@ -152,8 +153,35 @@ h2{
     }
     li{
         display: inline-block;
-        margin-right: 15px;
-        
+        margin-right: 15px;       
+        i{
+            font-size: 1.0rem;
+            margin-left: 5px;
+        }
+        .subMenu-container{
+            position: absolute;
+            background-color: $footer-subHeader-color;
+            width: 100vw;
+            left: 0;
+            z-index: 300;
+            height: 500px;
+            top: 217px;
+            box-sizing: border-box;
+            padding: 0;
+            margin: 0;
+            max-width: 100vw;
+            display: block;
+            overflow: hidden;
+            
+            a{
+                color: white;
+            }
+        }
+        &:hover{
+            .subMenu-container{
+                display: block;
+            }
+        }
     }
     a{
         font-size: 1.4rem;
@@ -352,7 +380,7 @@ h2{
                 transform: scale(1);
             }
             20%{
-                transform: scale(0.8);
+                transform: scale(0.85);
             }
             100%{
                 transform: scale(1.1);
