--- a/_css/main.scss
+++ b/_css/main.scss
@@ -614,7 +614,10 @@ h2{
         border-radius: 5px;
     }
     
-    
+    .row {
+        margin-left: 0;
+        margin-right: 0;
+    }
     
     
     
